--- a/index.html
+++ b/index.html
@@ -81,17 +81,23 @@
                 required
               />
             </div>
+
             <div class="mb-3">
               <label for="sexo" class="form-label">Sexo<span> *</span></label>
-              <input
-                type="text"
-                class="form-control"
-                id="sexo"
-                placeholder="Ej: M mujer, H hombre"
-                minlength="1"
-                maxlength="6"
-                required
-              />
+              <div class="dropdown">
+                <button
+                  class="btn btn-secondary dropdown-toggle bg-dark"
+                  type="button"
+                  data-bs-toggle="dropdown"
+                  aria-expanded="false"
+                >
+                  Elegir opción
+                </button>
+                <ul class="dropdown-menu">
+                  <li><a class="dropdown-item" href="#">Mujer</a></li>
+                  <li><a class="dropdown-item" href="#">Hombre</a></li>
+                </ul>
+              </div>
             </div>
             <div class="mb-3">
               <label for="peso" class="form-label"
@@ -124,7 +130,7 @@
             <div id="mensajeAyuda" class="form-text my-3">
               Los campos (*) son obligatorios.
             </div>
-          </form>        
+          </form>
         </div>
       </section>
     </main>
@@ -141,5 +147,11 @@
         </h2>
       </div>
     </footer>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+      crossorigin="anonymous"
+    ></script>
+    <script src="./js/app.js"></script>
   </body>
 </html>
