--- a/index.html
+++ b/index.html
@@ -83,15 +83,20 @@
             </div>
             <div class="mb-3">
               <label for="sexo" class="form-label">Sexo<span> *</span></label>
-              <input
-                type="text"
-                class="form-control"
-                id="sexo"
-                placeholder="Ej: M mujer, H hombre"
-                minlength="1"
-                maxlength="6"
-                required
-              />
+              <div class="dropdown">
+                <button
+                  class="btn btn-secondary dropdown-toggle bg-dark"
+                  type="button"
+                  data-bs-toggle="dropdown"
+                  aria-expanded="false"
+                >
+                  Elegir opción
+                </button>
+                <ul class="dropdown-menu">
+                  <li><a class="dropdown-item" href="#">Mujer</a></li>
+                  <li><a class="dropdown-item" href="#">Hombre</a></li>
+                </ul>
+              </div>
             </div>
             <div class="mb-3">
               <label for="peso" class="form-label"
@@ -108,15 +113,16 @@
               />
             </div>
             <div class="mb-3">
-              <label for="fechaNacimiento" class="form-label"
-                >Fecha de nacimiento<span> *</span></label
+              <label for="anioNacimiento" class="form-label"
+                >Año de nacimiento<span> *</span></label
               >
               <input
-                type="date"
+                type="number"
                 class="form-control"
-                id="fechaNacimiento"
-                placeholder="Ej: 01/01/2000"
-                max="2025-05-10"
+                id="anioNacimiento"
+                placeholder="Ej: 1998"
+                min="1900"
+                max="2025"
                 required
               />
             </div>
@@ -125,21 +131,31 @@
             </div>
             <div class="d-flex gap-3 justify-content-center mt-4">
               <button
-                type="button"
+                type="submit"
                 class="btn btn-primary"
-                onclick="mostrarGeneracion()"
+                  id="btnMostrarGeneracion"
               >
                 Mostrar generación
               </button>
               <button
-                type="button"
+                type="submit"
                 class="btn btn-success"
                 onclick="verificarMayorEdad()"
               >
                 Mayor de edad
               </button>
+               <button
+                type="submit"
+                class="btn btn-outline-danger"
+                onclick="verificarMayorEdad()"
+              >
+                Mostrar datos
+              </button>
             </div>
           </form>
+          <div class="contenedorGeneracion mt-4">
+            <h3>Mostrar generación</h3>
+          </div>
         </div>
       </section>
     </main>
@@ -156,5 +172,11 @@
         </h2>
       </div>
     </footer>
+     <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+      crossorigin="anonymous"
+    ></script>
+     <script src="./js/app.js"></script>
   </body>
 </html>
