agregue metodo obtenerGeneracion y modifique funcion mostrarGeneracion

--- a/index.html
+++ b/index.html
@@ -153,8 +153,9 @@
               </button>
             </div>
           </form>
-          <div class="contenedorGeneracion mt-4">
+          <div class="contenedorGeneracion mt-4 d-none">
             <h3>Mostrar generación</h3>
+            <p id="resultadoGeneracion"></p>
           </div>
         </div>
       </section>
