--- a/index.html
+++ b/index.html
@@ -82,22 +82,14 @@
               />
             </div>
             <div class="mb-3">
-              <label for="sexo" class="form-label">Sexo<span> *</span></label>
-              <div class="dropdown">
-                <button
-                  class="btn btn-secondary dropdown-toggle bg-dark"
-                  type="button"
-                  data-bs-toggle="dropdown"
-                  aria-expanded="false"
-                >
-                  Elegir opción
-                </button>
-                <ul class="dropdown-menu">
-                  <li><a class="dropdown-item" href="#">Mujer</a></li>
-                  <li><a class="dropdown-item" href="#">Hombre</a></li>
-                </ul>
-              </div>
+              <label for="sexo" class="form-label me-2">Sexo</label>
+              <select id="sexo">
+                <option value="">Seleccionar</option>
+                <option value="mujer">Mujer</option>
+                <option value="hombre">Hombre</option>
+              </select>
             </div>
+
             <div class="mb-3">
               <label for="peso" class="form-label"
                 >Peso (kg)<span> *</span></label
@@ -109,6 +101,20 @@
                 placeholder="Ej: 70 kg"
                 min="1"
                 max="120"
+                required
+              />
+            </div>
+            <div class="mb-3">
+              <label for="altura" class="form-label"
+                >Altura (cm) <span> *</span></label
+              >
+              <input
+                type="number"
+                class="form-control"
+                id="altura"
+                placeholder="Ej: 180"
+                min="1"
+                max="300"
                 required
               />
             </div>
@@ -133,7 +139,7 @@
               <button
                 type="submit"
                 class="btn btn-primary"
-                  id="btnMostrarGeneracion"
+                id="btnMostrarGeneracion"
               >
                 Mostrar generación
               </button>
@@ -144,7 +150,7 @@
               >
                 Mayor de edad
               </button>
-               <button
+              <button
                 type="submit"
                 class="btn btn-outline-danger"
                 onclick="verificarMayorEdad()"
@@ -153,7 +159,7 @@
               </button>
             </div>
           </form>
-          <div class="contenedorGeneracion mt-4 d-none">
+          <div class="contenedorGeneracion mt-4 d-none" id="btnGeneracion">
             <h3>Mostrar generación</h3>
             <p id="resultadoGeneracion"></p>
           </div>
@@ -173,11 +179,11 @@
         </h2>
       </div>
     </footer>
-     <script
+    <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
       crossorigin="anonymous"
     ></script>
-     <script src="./js/app.js"></script>
+    <script src="./js/app.js"></script>
   </body>
 </html>
