--- a/index.html
+++ b/index.html
@@ -144,11 +144,7 @@
               >
                 Mostrar generación
               </button>
-              <button
-                type="submit"
-                class="btn btn-success"
-                id="btnMayorEdad"
-              >
+              <button type="submit" class="btn btn-success" id="btnMayorEdad">
                 Mayor de edad
               </button>
               <button
@@ -161,11 +157,11 @@
             </div>
           </form>
           <!-- RESULTADOS -->
-          <div class="contenedorGeneracion mt-4 d-none" id="btnGeneracion">
+          <div class="contenedorGeneracion mt-4 d-none" id="contenedorGeneracion">
             <h3>Mostrar generación</h3>
             <p id="resultadoGeneracion"></p>
           </div>
-          <div class="contenedorMayorEdad mt-4 d-none" id="btnEdad">
+          <div class="contenedorMayorEdad mt-4 d-none" id="contenedorEdad">
             <h3>Mayor de edad</h3>
             <p id="resultadoMayorEdad"></p>
           </div>
