agregue funcion mostrarDatos y metodo para cambiar nombre a btn

--- a/index.html
+++ b/index.html
@@ -165,6 +165,10 @@
             <h3>Mayor de edad</h3>
             <p id="resultadoMayorEdad"></p>
           </div>
+            <div class="contenedorDatos mt-4 d-none" id="contenedorDatos">
+            <h3>Mostrar datos</h3>
+            <p id="resultadoDatos"></p>
+          </div>
         </div>
       </section>
     </main>
