agregue funcion de validacion de datos y quite hidden de hoja de estilos

--- a/index.html
+++ b/index.html
@@ -157,17 +157,22 @@
             </div>
           </form>
           <!-- RESULTADOS -->
-          <div class="contenedorGeneracion mt-4 d-none" id="contenedorGeneracion">
-            <h3>Mostrar generación</h3>
-            <p id="resultadoGeneracion"></p>
-          </div>
-          <div class="contenedorMayorEdad mt-4 d-none" id="contenedorEdad">
-            <h3>Mayor de edad</h3>
-            <p id="resultadoMayorEdad"></p>
-          </div>
+          <div id="resultados" class="d-flex flex-column gap-3 mt-4">
+            <div
+              class="contenedorGeneracion mt-4 d-none"
+              id="contenedorGeneracion"
+            >
+              <h3>Mostrar generación</h3>
+              <p id="resultadoGeneracion"></p>
+            </div>
+            <div class="contenedorMayorEdad mt-4 d-none" id="contenedorEdad">
+              <h3>Mayor de edad</h3>
+              <p id="resultadoMayorEdad"></p>
+            </div>
             <div class="contenedorDatos mt-4 d-none" id="contenedorDatos">
-            <h3>Mostrar datos</h3>
-            <p id="resultadoDatos"></p>
+              <h3>Mostrar datos</h3>
+              <p id="resultadoDatos"></p>
+            </div>
           </div>
         </div>
       </section>
