agregue titulo a formulario y cambie color a contenedor, placeholder

--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
     <main>
       <section class="container mb-5 mt-4">
         <div class="contenedorPrincipal">
+          <h1 class="mb-3 text-center">Ingreso de información personal</h1>
           <form>
             <div class="mb-3">
               <label for="nombre" class="form-label"
