agregue margin a botones y centre footer

--- a/index.html
+++ b/index.html
@@ -137,20 +137,20 @@
               Los campos (*) son obligatorios.
             </div>
             <!-- BOTONES -->
-            <div class="d-flex gap-3 justify-content-center mt-4">
+            <div class="d-flex justify-content-center mt-4">
               <button
                 type="submit"
-                class="btn btn-primary"
+                class="btn btn-primary m-1"
                 id="btnMostrarGeneracion"
               >
                 Mostrar generación
               </button>
-              <button type="submit" class="btn btn-success" id="btnMayorEdad">
+              <button type="submit" class="m-1 btn btn-success" id="btnMayorEdad">
                 Mayor de edad
               </button>
               <button
                 type="submit"
-                class="btn btn-outline-danger"
+                class="m-1 btn btn-outline-danger"
                 id="btnMostraDatos"
               >
                 Mostrar datos
@@ -178,7 +178,7 @@
         </div>
       </section>
     </main>
-    <footer class="bg-dark-subtle py-3">
+    <footer class="bg-dark-subtle py-3 text-center">
       <div class="container d-flex gap-3 justify-content-center">
         <h2>
           Desarrollado por
